# oxidised-vk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  scene_save.scene
assets/: torus_knot.mtl  viking_room.glb
assets/meshes/: cube.glb  suzanne.glb  teapot.glb
assets/shaders/: composite.frag  cull.comp  fullscreen.frag  instanced_mrt.frag  instanced_mrt.vert  mrt_lighting.frag  predepth.vert  prefix.comp
assets/shaders/include/: buffers.glsl  material.glsl  preamble.glsl
scripts/: generate_icons.lua
src/: aabb.rs  bloom_pass.rs  camera.rs  components.rs  culling.rs  engine_shaders.rs  image.rs  input_state.rs  main.rs  main_helpers.rs  math.rs  mesh.rs  mesh_registry.rs  render_context.rs  render_passes.rs  scene.rs  shader_bindings.rs  submission.rs  texture_cache.rs  vertex.rs
src/imgui/: mod.rs  renderer.rs  settings.rs  shaders.rs
src/scene/: entity_uuid.rs  mod.rs  world_ext.rs
src/scene/panel/: mod.rs
src/scene/serialisation/: component_registry.rs  component_serialiser.rs  helpers.rs  mod.rs  scene_serialiser.rs
src/windowing/: linux.rs  windows.rs
