[package]
name = "oxidised-vk"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30"
nalgebra-glm = "0.20.0"
rand = "0.10.0-rc.5"
imgui-winit-support = "0.13.0"
gltf = "1.4.1"
meshopt-rs = { version = "0.1.2", features = ["experimental"] }
legion = "0.4.0"
imgui = { version = "0.12.0", features = ["docking"] }
