[package]
name = "oxidised-vk"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Engine
nalgebra = "0.34.1"
nalgebra-glm = "0.20.0"
rand = "0.10.0-rc.5"
uuid = { version = "1.19.0", features = ["v4"] }
bytemuck = "1.24.0"
derive_more = { version = "2.1.0", features = ["constructor"] }

# Vulkan + Rendering
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30"
meshopt-rs = { version = "0.1.2", features = ["experimental"] }

# ECS + Assets
legion = "0.4.0"
gltf = "1.4.1"

# ImGui ecosystem
dear-imgui-rs = {version="0.8.0", features=["multi-viewport"]}
dear-imgui-winit = "0.8.0"
dear-imguizmo = "0.8.0"

[profile.release-lto]
inherits = "release"
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
